<resources>
    <string name="app_name">Coding Challenge2</string>
    <string name="bt_one">Text One</string>
    <string name="article_title">Beatles Anthology Vol. 1</string>
    <string name="article_subheading">Behind That Locked Door : Beatles Rarities!</string>
    <string name="article_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the <i>Let It Be</i> album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series.
        For more information, see the Beatles Time Capsule at www.rockument.com.
    \n\n
    This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on <i>The Lost Lennon Tapes Vol. 28</i>, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions.
    \n\n
    <b>Highlights include:</b>
    \n\n
    <b><i>1. Cry for a Shadow</i></b> - Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.
    \n\n
    <b><i>2. My Bonnie</i></b> and <b><i>Ain’t She Sweet</i></b> — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).
    \n\n
    <b><i>3. Searchin</i></b> — A Jerry Leiber - Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on outtake records featuring the Dead joined by the Beach Boys!
    \n\n
    <b><i>4. Love Me Do</i></b> — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version.
    \n\n
    <b><i>5. She Loves You – Till There Was You – Twist and Shout</i></b> — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark.
    \n\n
    <b><i>6. Leave My Kitten Alone</i></b> — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R&amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker.
    \n\n
    <b><i>7. One After 909</i></b> — A song recorded for the <i>Let It Be</i> album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R&amp;B feel to it.
    </string>


    <string name="bt_two">Text Two</string>
    <string name="judul_artikel">Timun Mas</string>
    <string name="article_subtitle"><b>Folk legend from the Central Java</b></string>
    <string name="articletext"><b>Long time ago</b>, living a couple of farmers. They live in a village near the forest. They live happy, unfortunately they have not only was a child also.
    Every day they pray to the God. They pray to be soon be a child. One day a giant passes where they reside. Giant prayer is heard that wife’s husband. Giant then provide them with seeds cucumber.
    \n\n
    “Plant seeds of this, Later you will soon get a female child,” said the giant.
    “Thank you, giant,” said the couple.
    \n\n
    “But there is condition, at the age of 17 years the child must be submitted with you to me,” the giant reply.
    Without thinking long they agree, because it wanted a child.
    \n\n
    Husband and wife farmers to plant the seeds cucumber. Every day they start caring for the plants that grow with it as best as possible. Many months and then bear a cucumber with golden color.
    Fruit cucumber that the longer become larger and heavier. When the fruit is ripe, they take it, carefully slit the fruit. Suddenly, in the fruit is found in infants of women who are very beautiful. Couple was very happy, they gave the name of the baby Timun Mas.
    \n\n
    <b>Year after year passed</b>,Timun Mas grown into a beautiful girl. Both parents are very proud of her. But they became very afraid, because in the anniversary Timun Mas at 17, the giant will back. The giant take back that promises to take Timun Mas.
    \n\n
    Farmers are trying to calm. “Wait a moment. Timun Mas playing. My wife would called her,” he said. Farmers find it immediately to her daughter. “My girl, take this,” she said while giving a cloth bag. “This will help fight the giant. Now flee as soon as possible,” she said. So even Timun Mas immediately fled.
    \n\n
    Couple on the sad departure Timun Mas. But they are not willing if their child become food giant. Giant waiting long time. He was not a patient. He knew, was that lied by couple of farmers. And he also destroyed the huts of the farmers. Then it was to pursue Timun Mas to forest.
    \n\n
    Giant run chase immediately Timun Mas. Near the gian,Timun Mas immediately take the handful of salt from the cloth pouch. Then salt spread it to the giant. Suddenly a wide sea also unfold. Giant forced to swim with great difficulty.
    \n\n
    Timun Mas ran again. But then most successful giant come closer. Timun Mas again taking bizarre objects from a cloth bag. He took the handful chili. Chili throwed to the giant. At once the tree branches and sharp thorns of the giant trap. Giant cried in pain. Timun Mas while running to save herself.
    \n\n
        But the giant is really strong. He was again nearly captured Timun Mas. <i>So</i> Timun Mas is also a third issue of miraculous. She sow seeds Cucumber magic. At once grow the cucumber garden very knowledgeable. Giant very tired and hungry. He also eat the fresh cucumber with oneself. Because of too much eating, giant was slept.
    Timun Mas again fled. She ran for dear life. But long run power out. More unlucky again because a giant awakened from sleep. Giant again almost catch her. Timun Mas very terrified. He also threw the last tool handful shrimp paste. Again miracles happen. A lake of mud spread wide. Giant fall into it. Hands almost reach Timun Mas. But the lake mud is basic to withdraw it. Giant panic, he can not breathe, then submerged.
    \n\n
    Timun Mas relieved. She has survived, Timun Mas is also return to home to their parents. Father and mother’s Timun Mas happy to see Timun Mas be save. They held, “Thank you, God. You have to save my girl,” said their delighted.
    \n\n
    Since that time Timun Mas can live quietly with her parents. They can be happy without living in fear again.
    </string>


    <string name="bt_three">Text Three</string>
    <string name="title_article">Sangkuriang</string>
    <string name="subtitle">Folk legend from the Central Java</string>
    <string name="text_article">Long time ago, there lived a beautiful woman named Dayang Sumbi. One day, she was quilting. Suddenly, her quilt fell off from her house. She prayed to Gods, "If a man picks up my quilt, he will be my husband. If a woman, she will be my sister".
        Then, a male dog picks it up. For keeping her words, she married the dog and called him Tumang. She gave birth to a baby, named him Sangkuriang, but never told him who his father was.
     \n\n
        One day, Sangkuriang was hunting with Tumang in the forest and he found nothing. He blamed Tumang for the failure and killed him. When Dayang Sumbi knew that, she hit Sangkuriang head with a big spoon and asked him to go away.
     \n\n
        Many years later, Sangkuriang found a house in the forest and a beautiful woman was inside. The woman, Dayang Sumbi, recognized him as Sangkuriang. He fell in love with her without knowing that she was his mother. He forced her to marry him. Dayang Sumbi could not accept it because they were mother and son.
     \n\n
        She asked him an impossible requirement to marry her. He must build a big boat within a night and shall be finished by dawn. Sangkuriang agreed and built it with the help of spirits.
     \n\n
        When he was almost finished, Dayang Sumbi asked women nearby to hit the grains as a fake sign that dawn is coming. The spirits run away and Sangkuriang failed to finish the boat. He was very angry and kicked away the boat upside down and it turned into a mountain called Tangkuban Perahu.
    </string>
</resources>