<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/article_title"
        android:background="#DF3B2F"
        android:padding="2dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/article_subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading"
        android:layout_marginTop="10dp"
        android:padding="2dp"
        android:text="@string/article_subheading"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:textColor="#DC880C"
        tools:ignore="TextContrastCheck" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_subheading"
        tools:ignore="UselessLeaf">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:padding="2dp"
                android:textColor="#4CAF50"
                android:text="@string/article_text" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>